feat: a bit of spaghetti code (to refactor later)
