# shared/backend-api/endpoints.ts
@@ -1,0 +1,2 @@
+export * from "./gen/endpoints/tasks.gen";
+export * from "./gen/endpoints/timers.gen";
